# cmGNC

./: .gitignore  CMakeLists.txt  README.md
matlab/design/launch/: AirDensity.m  Drag.m  EnforceHeightTiltPolyConsts.m  EnforceTimeTiltPolyConsts.m  EvalHeightTiltPoly.m  EvalTimeTiltPoly.m  GenInitHeightTiltPoly.m  GenInitPoly.m  GenerateInitialTrajectory.m  Grav.m  HeightPolyToVect.m  IGM.m  LaunchAscentGuidance.m  PolyToVect.m  PolyToVect1stDeg.m  PropTraj.m  PropTrajIGM.m  PropTrajSegment.m  PropTrajSegmentCoast.m  PropTrajSegmentIGM.m  RocketDynamics.m  RocketDynamicsCoast.m  RocketDynamicsIGM.m  SpeedController.slx  TestPolyGen.m  TestPropTraj.m  TestSpeedController.m  TrajCost.m  TrajCostDeriv.m  TrajToInput.m  VectToHeightPoly.m  VectToPoly.m  VectToPoly1stDeg.m  constraintEval.m  testIGM.m
src/: mainGNC.cc
src/example/: example-include.cc  example-include.h
